--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,4 +1,3 @@
-
 pipeline { 
     agent any
     stages {
@@ -11,28 +10,22 @@ pipeline {
                 }
             }
         }
-        stage('k8s') {
+        stage('iginx conteoller') {
             steps {
                 withAWS(credentials: 'aws_cren', region: 'us-east-1') {
                     sh 'aws eks update-kubeconfig --region us-east-1 --name sprint'
-                    sh 'kubectl apply -f k8s/.'
+                    sh 'helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx'
+                    sh 'helm upgrade -i ingress-nginx ingress-nginx/ingress-nginx --version 4.2.3 --namespace kube-system --set controller.service.type=LoadBalancer'
+                    sh 'kubectl -n kube-system rollout status deployment ingress-nginx-controller'
                 }
-    }
-    }
+             }
+        }
+        stage('deploy') {
+            steps {
+                withAWS(credentials: 'aws_cren', region: 'us-east-1') {
+                    sh 'kubectl apply -f k8s/.'  
+                }
+            }
+        }
 }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
