--- a/k8s/igress.yml
+++ b/k8s/igress.yml
@@ -1,12 +1,23 @@
-# apiVersion: networking.k8s.io/v1
-# kind: Ingress
-# metadata:
-#   name: my-app-ingress
-# spec:
-#   rules:
-#   - host: flask.com
-#     http:
-#       paths:
-#       - backend:
-#           serviceName: flask-app-service
-#           servicePort: 5000
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: app-ingress
+  annotations:     
+    nginx.ingress.kubernetes.io/load-balancer-name: ingress
+    nginx.ingress.kubernetes.io/target-type: ip
+    nginx.ingress.kubernetes.io/scheme: internet-facing
+    nginx.ingress.kubernetes.io/ip-address-type: dualstack
+    nginx.ingress.kubernetes.io/healthcheck-path: /healthz
+
+spec:
+  ingressClassName: nginx
+  rules:
+    - http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: flask-app-service
+                port:
+                  number: 5000
