--- a/MySQL-and-Python/docker-compose.yml
+++ b/MySQL-and-Python/docker-compose.yml
@@ -18,7 +18,7 @@ services:
   flask:
     build: .
     depends_on:
-      - mysql_db
+      - mysql-service
     ports:
       - 5000:5000
 volumes:
