--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,7 +12,8 @@ jobs:
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-            
+      - name: working dir
+        run: ls     
       - name: Login to azure Registry
         uses: docker/login-action@v3
         with:
