--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
-          context: ./MySQL-and-Python/
+          file: ./MySQL-and-Python/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
