--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,7 +27,7 @@ jobs:
           file: ./MySQL-and-Python/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: mandark.azurecr.io/${{ secrets.azure_repo_admin }}:1.0
+          tags: mandark.azurecr.io/mandark:1.0
 
       
       - name: Push image to GHCR
