--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,11 +27,5 @@ jobs:
           file: ./MySQL-and-Python/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: mandark.azurecr.io/mandark:1.0
-
-      
-      - name: Push image to GHCR
-        run: |
-          docker buildx imagetools create \
-            --tag mandark.azurecr/user/app:1.0 \
+          tags: mandark.azurecr.io/user:lastest
             
