--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,5 +1,8 @@
 name: backend ci
-
+env:
+  AZURE_WEBAPP_NAME: mn                 # set this to the name of your Azure Web App
+  REPO_SERVER_NAME: mandark.azurecr.io
+  image_name: backend
 on:
   push:
 
@@ -17,7 +20,7 @@ jobs:
       - name: Login to azure Registry
         uses: docker/login-action@v3
         with:
-          registry: mandark.azurecr.io
+          registry: ${{ env.REPO_SERVER_NAME }}
           username: ${{ secrets.azure_repo_admin }}
           password: ${{ secrets.repo_password }}
       
@@ -27,5 +30,23 @@ jobs:
           file: ./MySQL-and-Python/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: mandark.azurecr.io/user:lastest
-            
+          tags: ${{ env.REPO_SERVER_NAME }}/${{ env.image_name }}:lastest
+
+  deploy:
+    permissions:
+      contents: none
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'Development'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+    steps:
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          images: '${{ env.REPO_SERVER_NAME }}/${{ env.image_name }}:lastest' 
+
