--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,6 +1,8 @@
 name: backend ci
 env:
   AZURE_WEBAPP_NAME: mn                 # set this to the name of your Azure Web App
+  Container_instance_name: kill
+  Container_instance_ region: 'Canada Central'
   REPO_SERVER_NAME: mandark.azurecr.io
   image_name: backend
 on:
@@ -36,16 +38,38 @@ jobs:
     permissions:
       contents: none
     runs-on: ubuntu-latest
+    needs: build
     environment:
       name: 'Development'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
+
+      - uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          # publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           images: '${{ env.REPO_SERVER_NAME }}/${{ env.image_name }}:lastest' 
 
+
+      - name: 'Deploy to Azure Container Instances'
+        uses: 'azure/aci-deploy@v1'
+        with:
+          resource-group: ${{ secrets.RESOURCE_GROUP }}
+          dns-name-label: ${{ env.REPO_SERVER_NAME }}
+          image: '${{ env.REPO_SERVER_NAME }}/${{ env.image_name }}:lastest'
+          # registry-login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+          # registry-username: ${{ secrets.REGISTRY_USERNAME }}
+          # registry-password: ${{ secrets.REGISTRY_PASSWORD }}
+          name: ${{ env.Container_instance_name }}
+          location: ${{ env.Container_instance_ region }}      
+
+      - name: logout
+        run: |
+          az logout          
