--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,7 @@ name: backend ci
 env:
   AZURE_WEBAPP_NAME: mn                 # set this to the name of your Azure Web App
   Container_instance_name: kill
-  Container_instance_ region: 'Canada Central'
+  Container_instance_region: 'Canada Central'
   REPO_SERVER_NAME: mandark.azurecr.io
   image_name: backend
 on:
@@ -68,7 +68,7 @@ jobs:
           # registry-username: ${{ secrets.REGISTRY_USERNAME }}
           # registry-password: ${{ secrets.REGISTRY_PASSWORD }}
           name: ${{ env.Container_instance_name }}
-          location: ${{ env.Container_instance_ region }}      
+          location: ${{ env.Container_instance_region }}      
 
       - name: logout
         run: |
