--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,7 +36,7 @@ jobs:
 
   deploy:
     permissions:
-      contents: none
+      id-token: write #This is required for requesting the JWT
     runs-on: ubuntu-latest
     needs: docker
     environment:
