--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,10 +1,11 @@
-name: backend ci
+
 env:
   AZURE_WEBAPP_NAME: mn                 # set this to the name of your Azure Web App
   Container_instance_name: kayam
   Container_instance_region: 'Canada Central'
   REPO_SERVER_NAME: mandark.azurecr.io
   image_name: backend
+  gggg: jjjjj
 on:
   push:
 
